# taskyou

./: .claude  .gitignore  .golangci.yml  .goreleaser.yaml  .mcp.json  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PLAN.md  QUICKSTART.md  README.md  REVIEW.md  SECURITY.md  SETUP.md  TODOS.md  VERIFY.md  dangerous_mode_poem.txt  demo.tape  discord-post.md  go.mod  go.sum  parity-ignore.json  poem.txt
.claude/: settings.json
.claude-plugin/: plugin.json
.devcontainer/: README.md  devcontainer.json  post-create.sh
claude-commands/: task.md  tasks.md
desktop/: .gitignore  capabilities.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: env_check.rs  lib.rs  main.rs  pty.rs  supervisor.rs  terminal.rs
desktop/src-tauri/tests/: terminal_attach.rs
docs/: CNAME  DESIGN_GUIDE.md  EVENTS.md  LINEAR_BACKEND_IMPLEMENTATION.md  REMOTE_EXECUTION_ANALYSIS.md  SANDBOX_RECOMMENDATIONS.md  TUI_AUTOMATION_QUICKSTART.md  TUI_INTERACTION_RESEARCH.md  VIDEO_WALKTHROUGH.md  _config.yml  _headers  analysis-boris-cherny-recommendations.md  copilot-sdk-investigation.md  demo-script.md  executor_interface.md  extension-first.md  index.html  install-macos.sh  install.sh  ios-shortcut.md  mcp-tools-reference.md  multiple-panes.md  notifications.md  orchestrator.md  pluggable-cloud-execution.md  plugin-ideas.md  plugins.md  (+7 more)
(+705 files in other folders)
