[package]
name = "taskyou-desktop"
version = "0.1.0"
description = "TaskYou desktop GUI"
authors = ["Bruno Bornsztein"]
edition = "2021"

[lib]
name = "taskyou_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-notification = "2"
window-vibrancy = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
base64 = "0.22"
ureq = "2"
dirs = "5"
